k8s/hw8/hw8_1_nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: hw8-1
  ports:
    - name: nginx-80
      protocol: TCP
      port: 80
      targetPort: 80
