k8s/hw8/hw8_2_nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx2-svc
spec:
  selector:
    app: hw8-2
  ports:
    - name: nginx2-80
      protocol: TCP
      port: 80
      targetPort: 80
