k8s/hw8/hw8_2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "public"
  rules:
  - host: zakamaldin.test2
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx2-svc
            port:
              number: 80
  tls: 
  - hosts: 
    - zakamaldin.test2
    secretName: hw8-2-tls
